# social_mini

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: index.html
social_mini/: database.py  main.py
social_mini/alembiс/alembic/: env.py
social_mini/api/: auth.py  posts.py  social_extra.py  users.py
social_mini/core/: security.py
social_mini/crud/: __init__.py  comment.py  follow.py  like.py  post.py  user.py
social_mini/models/: base.py  comment.py  follow.py  like.py  post.py  user.py
social_mini/schemas/: __init__.py  comment.py  follow.py  like.py  post.py  user.py
tests/: conftest.py  test_auth.py  test_posts.py
